--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,7 +2,7 @@ linters-settings:
     golint:
         min-confidence: 0.1
     goimports:
-        local-prefixes: logur.dev/adapter/template
+        local-prefixes: logur.dev/adapter/logrus
 
 linters:
     enable-all: true
